video-list-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: video-list-service
  labels:
    app: video-list-service
    tier: backend
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: video-list-service
